Course card buttons overflow fix

--- a/app/assets/stylesheets/partials/courses.scss
+++ b/app/assets/stylesheets/partials/courses.scss
@@ -39,7 +39,7 @@
         }
 
         .course-card {                   
-            box-shadow: 1px 2px 1px #D1D1D1;    
+            box-shadow: 1px 2px 1px #D1D1D1;   
             margin-bottom: 20px;
 
 
@@ -52,23 +52,23 @@
                 border-radius: 4px 4px 0 0;
             }
 
-            .course-card-block {    
-                min-height: 300px; 
-                max-height: 300px;                   
+            .course-card-block {                      
                 background-color: #FFFFFF;
-                padding: 50px 20px 20px;
+                padding: 75px 30px 30px; 
                 /* top | horizontal | bottom */
 
-                div {
-                    width: 100%;
+                div,
+                p {
                     white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
                 }
 
                 ul {
-                    padding: 10px 0;
+                    margin-top: 30px;
+                    margin-bottom: 0px;
                 }
+
             }
 
         }
